无数辛苦,终于换了一个主题

--- a/source/_posts/威尔逊定理的证明.md
+++ b/source/_posts/威尔逊定理的证明.md
@@ -2,6 +2,7 @@
 title: 威尔逊定理的证明
 date: 2022-09-09 19:02:57
 tags:
+mathjax: true
 ---
 
 我们今天来看威尔逊定理——数论中的一个基本定理.
@@ -18,7 +19,7 @@ $$
 
 我们这里采用分类讨论的方法:
 
-#### 一.$p$ 不为素数的情况:
+**一.$p$ 不为素数的情况:**
 
     若$p$ 不为素数,那么就一定是1或者合数.
 
@@ -62,7 +63,7 @@ $$
 
         其中$n=1 \times2\times3\cdots(k-1)(k+1)\cdots(2k-1)(2k+1)\cdots(p-2)(p-1)$ 
 
-#### 二.$p$ 是素数的情况
+**二.$p$ 是素数的情况**
 
     
 
